[package]
name = "ragnaroek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["usb"]

# Whether to support USB targets or network targets only.
usb = [ "rusb" ]

[dependencies]
clap = { version = "3.0.13" }
either = { version = "1.6.1", default_features = false }
rusb = { version = "0.9.0", features = ["vendored"], optional = true }
