[package]
name = "ragnaroek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["usb"]

# Whether to support USB targets or network targets only.
usb = [ "rusb" ]

[dependencies]
clap = { version = "3.0.13" }
either = { version = "1.6.1", default_features = false }
env_logger = { version = "0.9.0", default_features = false, features = [ "termcolor" ] }
log = { version = "0.4.16", default_features = false, features = [ "std" ] }
rusb = { version = "0.9.0", features = ["vendored"], optional = true }
pit = { path = "pit/", features = ["tabled", "serde"] }
serde_json = "1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
