[package]
name = "pit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
# Whether to derive table formatting for convenient human-readable printing of entries
tabled = { version = "0.8.0", optional = true }
# Whether to derive serde (de-)serialization for data types
serde = { version = "1", optional = true, features = [ "derive" ] }

[dev-dependencies]
test-case = "2.0.2"
