[package]
name = "ragnaroek-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.13" }
either = { version = "1.6.1", default_features = false }
env_logger = { version = "0.9.0", default_features = false, features = [ "termcolor" ] }
pit = { path = "../pit", features = [ "tabled", "serde" ] }
ragnaroek = { path = "../ragnaroek", features = [ "usb" ] }
serde_json = "1"
