[package]
name = "ragnaroek-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4" }
either = { version = "1.6", default_features = false }
env_logger = { version = "0.10", default_features = false, features = [ "color" ] }
pit = { path = "../pit", features = [ "tabled", "serde" ] }
ragnaroek = { path = "../ragnaroek", features = [ "usb" ] }
serde_json = "1"
is-terminal = "0.4"
indicatif = { version = "0.17", default_features = false }