[package]
name = "ragnaroek-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pit = { path = "../pit", features = [ "serde" ] }
ragnaroek = { path = "../ragnaroek", features = [ "usb" ] }
rfd = { version = "0.11", default-features = false, features = [ "xdg-portal" ] }
eframe = { version = "0.21", features = ["dark-light"], default-features = true }
egui_extras = { version = "0.21", default-features = false }
egui_dock = "0.4"
egui_logger = "0.3"

