[package]
name = "ragnaroek-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pit = { path = "../pit", features = ["serde"] }
ragnaroek = { path = "../ragnaroek", features = ["usb"] }
rfd = { version = "0.14", default-features = false, features = [
	"xdg-portal",
	"async-std",
] }
eframe = "0.28"
egui_extras = { version = "0.28", default-features = false }
egui_dock = "0.13"
egui_logger = "0.5"
bus = "2.4.0"
log = { version = "0.4", default-features = false, features = ["std"] }
# Until https://github.com/rust-lang-nursery/lazy-static.rs/issues/201 is fixed
lazy_static = { git = "https://github.com/rust-lang-nursery/lazy-static.rs", branch = "master" }
env_logger = "0.11.5"
