[package]
name = "ragnaroek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["usb"]

# Whether to support USB targets or network targets only.
usb = ["rusb"]

[dependencies]
either = { version = "1", default-features = false }
log = { version = "0.4", default-features = false, features = ["std"] }
rusb = { version = "0.9", features = ["vendored"], optional = true }
pit = { path = "../pit", features = ["tabled", "serde"] }
odintar = { path = "../odintar" }
